<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="app.cuenca.petservice.com.petservice.servicios">

    <Button
        android:id="@+id/button_vacuna"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/vacuna"
        android:textSize="40sp"
        android:background="@color/colorAccent2"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button_despara"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/button_despara"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/desparacitacion"
        android:textSize="40sp"
        android:background="@color/colorPrimaryLight2"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/button_antipul"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/button_antipul"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/antipulgas"
        android:textSize="40sp"
        android:background="@color/colorPrimaryDark"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.498"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1" />

    <Button
        android:id="@+id/button_aseo"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/aseo"
        android:textSize="40sp"
        android:background="@color/colorPrimaryLight"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_antipul"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/button_consulta"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:text="@string/consulta"
        android:textSize="40sp"
        android:background="@color/colorPrimary2"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button_antipul"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="100dp" />

</android.support.constraint.ConstraintLayout>
